# pixel-filter

./: .gitignore  Cargo.toml  index-a692695d3df04b2f.css  index-cffa4228382748be.css  index.html  pixel-filter-d1c4277530fb222f.js  pixel-filter-d1c4277530fb222f_bg.wasm  web-3affc6358b4df848.js  web-3affc6358b4df848_bg.wasm  web-885c916c906b896c.js  web-885c916c906b896c_bg.wasm  web-e36fffc11416f7b6.js  web-e36fffc11416f7b6_bg.wasm
.github/workflows/: ci.yml
src/: filter.rs  index.css  layout.rs  lib.rs  main.rs
