[package]
name = "pixel-filter"
version = "0.1.0"
edition = "2021"
default-run = "web"

[dependencies]
web-sys = { version = "0.3.64", features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    'EventListener',
    'HtmlCanvasElement',
    'HtmlImageElement',
    'CanvasRenderingContext2d',
    'ImageData',
    'console',
] }
wasm-bindgen = "0.2.87"
image = "0.24.7"
palette = "0.7.3"
anyhow = "1.0.75"
console_error_panic_hook = "0.1.7"
yew = { version = "0.20.0", features = ["csr"] }
js-sys = "0.3.64"
base64 = "0.21.3"
gloo = "0.10.0"

[profile.release]
lto = true
